--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -18,6 +18,21 @@
             <a href="#" class="ml-1 px-1 py-2 rounded-md text-sm font-medium text-purple-300">RSS</a>
           </div>
         </div>
+        <div class="-mr-2 flex md:hidden">
+          <button @click="open = !open" class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-white hover:bg-gray-700 focus:outline-none focus:bg-gray-700 focus:text-white">
+            <svg class="h-6 w-6" stroke="currentColor" fill="none" viewBox="0 0 24 24">
+              <path :class="{'hidden': open, 'inline-flex': !open }" class="inline-flex" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+              <path :class="{'hidden': !open, 'inline-flex': open }" class="hidden" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+            </svg>
+          </button>
+        </div>
+      </div>
+    </div>
+    <div :class="{ 'block': open, 'hidden': !open }" class="hidden md:hidden">
+      <div class="px-2 pt-2 pb-3 sm:px-3">
+        <a href="#" class="mt-1 block px-3 py-2 rounded-md text-base font-medium text-purple-300">About</a>
+        <a href="#" class="mt-1 block px-3 py-2 rounded-md text-base font-medium text-purple-300">Now</a>
+        <a href="#" class="mt-1 block px-3 py-2 rounded-md text-base font-medium text-purple-300">RSS</a>
       </div>
     </div>
   </nav>
