Desktop menu is now dynamic and weighted

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,21 +1,27 @@
 <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.0.1/dist/alpine.js" defer></script>
 
 <div>
-  <nav x-data="{ open: false }" @keydown.window.escale="open = false" class="bg-gray-800">
+  <nav x-data="{ open: false }" @keydown.window.escale="open = false">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="flex items-center justify-between h-16">
         <div class="flex items-center">
           <div class="flex-shrink-0">
-            <h1 class="text-purple-300 text-lg font-bold">{{ .Site.Params.siteName }}</h1>
+            <a href="/">
+              <h1 class="text-purple-300 text-lg font-bold">{{ .Site.Params.siteName }}</h1>
+            </a>
           </div>
         </div>
         <div class="hidden md:block">
           <div class="ml-4 flex items-center md:ml-6">
-            <a href="#" class="ml-2 px-1 py-2 rounded-md text-sm font-medium text-purple-300">About</a>
-            <span class="ml-1 text-gray-500">//</span>
-            <a href="#" class="ml-1 px-1 py-2 rounded-md text-sm font-medium text-purple-300">Now</a>
-            <span class="ml-1 text-gray-500">//</span>
-            <a href="#" class="ml-1 px-1 py-2 rounded-md text-sm font-medium text-purple-300">RSS</a>
+            {{/*
+              We don't want a slash to render on the last menu item so
+              just check if we're in the last iteration of the menu rendering loop
+            */}}
+            {{ $menuLength := sub (len .Site.Menus.main) 1 }}
+            {{ range $i, $link := .Site.Menus.main }}
+              <a href="{{ $link.URL }}" class="ml-2 px-1 py-2 rounded-md text-md font-medium text-purple-300">{{ $link.Name }}</a>
+              {{ if ne $menuLength $i }}<span class="ml-1 text-sm text-gray-500">//</span>{{ end }}
+            {{ end }}
           </div>
         </div>
         <div class="-mr-2 flex md:hidden">
