--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,7 +4,7 @@
   <title>utf9k</title>
   {{ partial "head.html" . }}
 </head>
-<body>
+<body class="bg-gray-800">
   {{ partial "header.html" . }}
 
   <div class="content">
