--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -7,7 +7,7 @@
 <body class="bg-gray-800">
   {{ partial "header.html" . }}
 
-  <div class="content">
+  <div class="content font-sans text-gray-500">
     {{ block "main" . }}
     {{ end }}
   </div>
