--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,4 +1,10 @@
 {{ define "main" }}
-<h1>{{ .Title }}</h1>
-{{ .Content }}
+<div class="w-full max-w-screen-xl relative mx-auto px-6 pt-10 pb-40 md:pb-24">
+  <div class="px-4 md:px-6 max-w-2xl md:max-w-3xl mx-auto">
+    <h1 class="text-3xl sm:text-4xl font-semibold leading-tight">{{ .Title }}</h1>
+    <div class="markdown pt-6 pb-40">
+      {{ .Content }}
+    </div>
+  </div>
+</div>
 {{ end }}
