--- a/assets/css/code.css
+++ b/assets/css/code.css
@@ -1,30 +1,14 @@
-code,
-pre {
-  font-style: initial;
+.markdown pre {
+  @apply block m-0 p-0 mt-5 overflow-auto text-white text-sm bg-gray-800 leading-normal;
+  scrollbar-width: none;
 }
 
-code {
-  color: #f8f8f2;
-  padding: .2em .2em 0;
+.markdown > p > code {
+  @apply m-0 p-0 mt-5 overflow-auto text-white text-sm bg-gray-800 leading-normal;
 }
 
-.highlight > pre > code {
-  padding: 0;
-  vertical-align: text-bottom;
-}
-
-blockquote {
-  border-left: .1rem solid #ff9b00;
-  margin-left: 0;
-  padding: .4rem .8rem;
-}
-
-blockquote p {
-  margin: 0 0 1.2rem
-}
-
-blockquote p:last-child {
-  margin: 0;
+.markdown pre code {
+  @apply inline-block p-4 scrolling-touch subpixel-antialiased;
 }
 
 /* Syntax highlighting -> https://github.com/dracula/pygments */
