--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,10 +1,9 @@
 {{ define "main" }}
-<div class="w-full max-w-screen-xl relative mx-auto px-6 pt-10 pb-40 md:pb-24">
-  <div class="px-4 md:px-6 max-w-2xl md:max-w-3xl mx-auto">
-    <h1 class="text-3xl sm:text-4xl font-semibold leading-tight">{{ .Title }}</h1>
-    <div class="markdown pt-6 pb-40">
-      {{ .Content }}
-    </div>
+  {{ if and (ne .Title "") (ne .Params.showTitle false) }}
+  <h1 class="text-3xl sm:text-4xl font-semibold leading-tight">{{ .Title }}</h1>
+  <h3 class="text-lg">{{ partial "postdate.html" . }} <span class="ml-1 text-sm text-gray-500">//</span> {{ partial "readtime.html" . }}{{ if (ne .Params.showPageSource false) }} // {{ partial "pagesource.html" . }}{{ end }}</h3>
+  {{ end }}
+  <div class="markdown">
+    {{ .Content }}
   </div>
-</div>
 {{ end }}
