--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,26 +1,3 @@
 {{ define "main" }}
-<div class="markdown max-w-4xl">
-  <p>Hey there</p>
-  <p>I'm <a href="/about">Marcus Crane</a>, and this is my personal site.</p>
-  <p>There's a few bits and pieces: mainly my blog content but also other writings floating around</p>
-
-  <h2>Some recent blog posts</h2>
-  <ul class="no-list-style">
-    {{ $paginator := .Paginate (where site.RegularPages "Section" "blog") .Site.Params.Paginate }}
-    {{ range $paginator.Pages }}
-    <li>
-      <span>{{ .Date.Format "2006-01-02" }}</span>
-      //
-      <a href="{{ .RelPermalink }}">
-        <span>{{ .Title }}</span>
-      </a>
-      <span>
-      {{ range .Params.tags }}
-      <a class="text-gray-600" href="/tags/{{ . }}">#{{ . }}</a>
-      {{ end }}
-      </span>
-    </li>
-    {{ end }}
-  </ul>
-  <a href="/blog">> View all</a>
+  {{ .Content }}
 {{ end }}
