--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,12 +1,6 @@
 {{ define "main" }}
-<div class="content">
-    <div class="content-inner">
-        <div class="content-header">
-            <h1>{{ .Title }}</h1>
-        </div>
-        <div class="content-body">
-            {{ .Content }}
-        </div>
-    </div>
-</div>
+<article>
+  <h1>{{ .Title }}</h1>
+  {{ .Content }}
+</article>
 {{ end }}
