Improved text positioning

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -5,7 +5,9 @@
 </head>
 <body>
   {{ partial "header.html" . }}
+  <div id="content">
   {{ block "main" . }}
   {{ end }}
+  </div>
 </body>
 </html>
