--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,6 +1,6 @@
 <nav>
     <a href="/">utf9k</a>
-    {{ $strippedURL := replace .Page.URL "/" "" }}
+    {{ $strippedURL := replace .RelPermalink "/" "" }}
     {{ if ne .Section $strippedURL }}
     //
     <a href="/{{ .Section }}">up</a>
