--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,12 +1,13 @@
 {{ define "main" }}
-<div class="content">
-    <div class="content-inner">
-        <div class="content-header">
-            <h1>{{ .Title }}</h1>
-        </div>
-        <div class="content-body">
-            {{ .Content }}
-        </div>
+<article>
+    <header>
+        <h1>{{ .Title }}</h1>
+        {{ if not .Params.hidedate }}
+        <time>{{ .Date.Format "January 2, 2006" }}</time>
+        {{ end }}
+    </header>
+    <div id="post-body">
+        {{ .Content }}
     </div>
-</div>
+</article>
 {{ end }}
