--- a/layouts/notes/list.html
+++ b/layouts/notes/list.html
@@ -2,13 +2,13 @@
 <h1>{{ .Title }}</h1>
 <ul>
   {{ range .Pages }}
-  <li>
+  <li class="notes-list">
     <a href="{{ .RelPermalink }}">
       <span>{{ .Title }}</span>
     </a>
-    <span class="tag-list" style="float: right;">
+    <span class="tag-list">
         {{ range .Params.tags }}
-        <a href="#">{{ . }}</a>
+        <a href="{{ $.Site.BaseURL }}tags/{{ . | urlize }}">#{{ . }}</a>
         {{ end }}
     </span>
   </li>
