--- a/layouts/notes/single.html
+++ b/layouts/notes/single.html
@@ -2,9 +2,7 @@
 <article>
     <header>
         <h1>{{ .Title }}</h1>
-        {{ if not .Params.hidedate }}
-        <time>{{ .Date.Format "January 2, 2006" }}</time>
-        {{ end }}
+        <time>Last modified on {{ .Lastmod.Format "January 2, 2006" }}</time>
     </header>
     <div id="post-body">
         {{ .Content }}
