--- a/static/css/style.css
+++ b/static/css/style.css
@@ -78,6 +78,9 @@ code {
     background-color: rgba(27, 31, 35, .05);
     border-radius: 4px;
     margin: 0;
+}
+
+p > code {
     padding: .2rem .4rem;
 }
 
