Wrote blog listing split by year

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,21 @@
 {{ define "main" }}
-<div id="home">
-  <h1>{{ .Title }}</h1>
-  {{ .Content }}
-  </div>
+<div id="home" style="text-align: center;">
+  <h1>utf9k</h1>
+  <p>welcome. i try to write things from time to time.</p>
+  <a href="/">you can find me in a whole bunch of places</a>
+  <ul style="list-style: none; padding-left: 0;">
+    <li>
+      <a href="/blog">blog</a>
+      //
+      <a href="/notes">notes</a>
+      <br />
+      <br />
+      <a href="/about">about</a>
+      //
+      <a href="/now">now</a>
+      //
+      <a href="/uses">uses</a>
+    </li>
+  </ul>
+</div>
 {{ end }}
