--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,7 +2,7 @@
 <div id="home" style="text-align: center;">
   <h1>utf9k</h1>
   <p>welcome. i try to write things from time to time.</p>
-  <a href="/">you can find me in a whole bunch of places</a>
+  <!--<a href="/">you can find me in a whole bunch of places</a>-->
   <ul style="list-style: none; padding-left: 0;">
     <li>
       <a href="/blog">blog</a>
