--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -9,3 +9,14 @@
     </div>
 </article>
 {{ end }}
+
+{{ define "json+ld" }}
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BlogPosting",
+  "headline": "{{ .Title }}",
+  "datePublished": "{{ .Date.Format "2006-01-02T15:04:05-00:00" }}"
+}
+</script>
+{{ end }}
