Inline CSS and center posts

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,7 +3,7 @@
   <h1>utf9k</h1>
   <p>welcome. i try to write things from time to time.</p>
   <a href="/a-whole-bunch-of-places">you can find me in a whole bunch of places</a>
-  <ul style="list-style: none; padding-left: 0;">
+  <ul class="no-list-style">
     <li>
       <a href="/blog">blog</a>
       //
