--- a/layouts/notes/list.html
+++ b/layouts/notes/list.html
@@ -1,17 +1,19 @@
 {{ define "main" }}
-<h1>{{ .Title }}</h1>
-<ul>
-  {{ range .Pages }}
-  <li class="notes-list">
-    <a href="{{ .RelPermalink }}">
-      <span>{{ .Title }}</span>
-    </a>
-    <span class="tag-list">
-        {{ range .Params.tags }}
-        <a href="{{ $.Site.BaseURL }}tags/{{ . | urlize }}">#{{ . }}</a>
-        {{ end }}
-    </span>
-  </li>
-  {{ end }}
-</ul>
+<div class="item-list">
+  <h1>{{ .Title }}</h1>
+  <ul class="no-list-style">
+    {{ range .Pages }}
+    <li class="notes-list">
+      <a href="{{ .RelPermalink }}">
+        <span>{{ .Title }}</span>
+      </a>
+      <span class="tag-list">
+          {{ range .Params.tags }}
+          <a href="{{ $.Site.BaseURL }}tags/{{ . | urlize }}">#{{ . }}</a>
+          {{ end }}
+      </span>
+    </li>
+    {{ end }}
+  </ul>
+</div>
 {{ end }}
