--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -7,5 +7,6 @@
 <body>
   {{ block "main" . }}
   {{ end }}
+  <script async defer data-domain="utf9k.net" src="https://plausible.io/js/plausible.js"></script>
 </body>
 </html>
