--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,19 +2,19 @@
 <div id="home" style="text-align: center;">
   <h1>utf9k</h1>
   <p>welcome. i try to write things from time to time.</p>
-  <a href="/a-whole-bunch-of-places">you can find me in a whole bunch of places</a>
+  <a href="/a-whole-bunch-of-places/">you can find me in a whole bunch of places</a>
   <ul class="no-list-style">
     <li>
-      <a href="/blog">blog</a>
+      <a href="/blog/">blog</a>
       //
-      <a href="/notes">notes</a>
+      <a href="/notes/">notes</a>
       <br />
       <br />
-      <a href="/about">about</a>
+      <a href="/about/">about</a>
       //
-      <a href="/now">now</a>
+      <a href="/now/">now</a>
       //
-      <a href="/uses">uses</a>
+      <a href="/uses/">uses</a>
     </li>
   </ul>
 </div>
