--- a/templates/page.html
+++ b/templates/page.html
@@ -1,6 +1,22 @@
-<!DOCTYPE html>
-<html>
-  <body>
-    {{ page.content | safe }}
-  </body>
-</html>
+{% extends "base.html" %}
+{% block content %}
+	<article>
+		<header>
+			<h1>{{ page.title }}</h1>
+		</header>
+		<div id="post-body">
+			{{ page.content | safe }}
+		</div>
+	</article>
+{% endblock content %}
+
+{% block jsonld %}
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BlogPosting",
+  "headline": "{{ page.title }}",
+  "datePublished": "{{ page.date }}"
+}
+</script>
+{% endblock jsonld %}
