--- a/templates/page.html
+++ b/templates/page.html
@@ -5,6 +5,7 @@
 			<h1>{{ page.title }}</h1>
 		</header>
 		<div id="post-body">
+      {% include "partials/toc.html" %}
 			{{ page.content | safe }}
 		</div>
 	</article>
