--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,4 @@
-{% extends "base.html" %}
-{% block content %}
+{{ define "main" }}
 <div id="home" style="text-align: center;">
   <h1>utf9k</h1>
   <p>welcome. i try to write things from time to time.</p>
@@ -14,7 +13,9 @@
       <a href="/about/">about</a>
       //
       <a href="/now/">now</a>
+      //
+      <a href="/uses/">uses</a>
     </li>
   </ul>
 </div>
-{% endblock content %}
+{{ end }}
