--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,21 +1,10 @@
 {{ define "main" }}
-<div id="home" style="text-align: center;">
+<div id="home">
   <h1>utf9k</h1>
-  <p>welcome. i try to write things from time to time.</p>
-  <a href="/a-whole-bunch-of-places/">you can find me in a whole bunch of places</a>
-  <ul class="no-list-style">
-    <li>
-      <a href="/blog/">blog</a>
-      //
-      <a href="/notes/">notes</a>
-      <br />
-      <br />
-      <a href="/about/">about</a>
-      //
-      <a href="/now/">now</a>
-      //
-      <a href="/uses/">uses</a>
-    </li>
-  </ul>
-</div>
+  
+  <p>My name is <a href="/about">Marcus Crane</a> and this is my own personal little slice of internet</p>
+  
+  <p>I maintain a <a href="/blog/">blog</a> and I also upload some <a href="/notes/">notes</a> from time to time.</p>
+  
+  <p>If you want to know what I'm currently up to, or realistically what I was up to two weeks ago, there's <a href="/now">a page for that</a></p>
 {{ end }}
