--- a/layouts/notes/list.html
+++ b/layouts/notes/list.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 <div class="item-list">
-  <h1>{{ .Title }}</h1>
+  <h1>Notes</h1>
   <ul class="no-list-style">
     {{ range .Pages.ByTitle }}
     <li class="notes-list">
