--- a/layouts/partials/css.html
+++ b/layouts/partials/css.html
@@ -1,169 +1,110 @@
 <style>
+  :root {
+    --blueish: #1f303e;
+    --greyish: #e0e1d9;
+  }
+  
   html {
-    line-height: 1.15;
+    font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Ubuntu, "Helvetica Neue", Arial, sans-serif;
   }
-
-  body {
-    background-color: #fff;
-    font-family: -apple-system,BlinkMacSystemFont, avenir next, avenir, helvetica neue, helvetica, ubuntu, roboto, noto, segoe ui, arial, sans-serif;
-    margin: 0;
-    max-width: 100%;
-    padding: 3rem;
-  }
-
-  a {
-    color: #7e0ecc;
-    text-decoration: none;
-  }
-
-  a:hover {
-    color: #9A1DF0;
-  }
-
-  @media screen and (max-width: 500px) {
+  
+  /* Colour schemes */
+  
+  @media (prefers-color-scheme: light) {
     body {
-      padding: 3rem;
-      width: 75%;
+      background-color: var(--greyish);
+      color: var(--blueish);
+    }
+    
+    h1, h2, h3, h4, h5, h6, p, a {
+      color: var(--blueish);
     }
   }
-
+  
+  @media (prefers-color-scheme: dark) {
+    body {
+      background-color: var(--blueish);
+      color: var(--greyish);
+    }
+    
+    h1, h2, h3, h4, h5, h6, p, a {
+      color: var(--greyish);
+    }
+  }
+  
+  body {
+    padding-left: 2rem; // TODO: make this the default level of indentation
+    padding-top: .5rem;
+  }
+  
+  /* Grouping items */
+  
+  ul {
+    margin: 0;
+    padding: 0;
+  }
+  
+  li {
+    list-style-type: none;
+  }
+  
+  li:before {
+    //content: "‣";
+  }
+  
+  /* Typography */
+  
+  a {
+    font-size: 1.2rem;
+    font-weight: 700;
+  }
+  
   h1 {
     font-size: 3rem;
-    line-height: 1.15;
-    margin-bottom: 0;
+    font-weight: 800;
   }
-
-  time {
-    color: dimgray;
-    font-size: 1.25rem;
+  
+  h1:before {
+    content: "‣ ";
   }
-
+  
+  
   p {
+    font-size: 1.3rem;
     line-height: 1.5;
+    margin-top: 1rem;
+    margin-bottom: 2rem;
   }
-
-  .no-list-style {
-    list-style: none;
-    padding-left: 0;
-  }
-
-  .item-list {
-    margin: 0 auto;
-    max-width: 70ch;
-  }
-
-  article {
-    margin: 0 auto;
-    max-width: 30rem;
-  }
-
-  @media screen and (max-width: 500px) {
-    article {
-      padding: 0;
-      width: 100%;
-    }
-  }
-
-  figure {
-    padding-left: 0;
-    padding-right: 0;
-  }
-
-  img {
+  
+  blockquote {
+    border-left: 4px solid;
+    margin-left: 0px;
+    margin-top: 2rem;
+    padding-left: 1rem;
     width: 100%;
   }
-
-  #post-body {
-    margin-top: 5rem;
-  }
-
-  .ox-hugo-toc {
-    padding-bottom: 2rem;
-  }
-
-  code {
-    background-color: rgba(27, 31, 35, .05);
-    border-radius: 4px;
-    margin: 0;
-  }
-
-  p > code {
-    padding: .2rem .4rem;
-  }
-
-  pre {
-    overflow-x: scroll;
+  
+  article > code {
+    border: 1px solid;
+    border-radius: 3px;
+    margin-top: 1rem;
     padding: 1rem;
   }
-
-  pre code {
-    font-size: 1rem;
+  
+  code {
+    font-size: 1.15rem;
+    font-family: monospace;
   }
-
-  blockquote {
-    border-color: #7e0ecc;
-    border-left-style: solid;
-    border-left-width: 1px;
-    border-width: .125rem;
-    margin-left: 0;
-    margin-top: 0;
-    padding-left: 1rem;
+  
+  blockquote > p {
+    font-size: 1.5rem; // TODO: could be a little smaller?
   }
-
-  table {
-    border-collapse: collapse;
-    border-radius: .25rem;
-    border-spacing: 0;
-    padding-bottom: .5rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    padding-top: .5rem;
-    width: 100%;
+  
+  blockquote > i {
+    font-size: .9rem;
   }
-
-  th {
-    background-color: #eee;
-  }
-
-  tr th {
-    font-size: .875rem;
-    font-weight: 600;
-    padding-bottom: .5rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    padding-top: .5rem;
-    text-transform: uppercase;
-  }
-
-  tr td {
-    padding-bottom: .5rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    padding-top: .5rem;
-  }
-
-  tr:nth-child(2n+2) {
-    background-color: #eee;
-  }
-
-  .tag-list {
-    float: right;
-  }
-
-  @media screen and (max-width: 950px) {
-    .tag-list {
-      display: block;
-      float: none;
-      margin-bottom: 1rem;
-    }
-
-    .notes-list a {
-      display: inline-block;
-    }
-  }
-
-  .tag-list a {
-      color: #777;
-      text-decoration: none;
+  
+  time {
+    font-size: .75rem;
   }
 </style>
