--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<div id="home">
+<div>
   <h1>utf9k</h1>
   
   <p>My name is <a href="/about">Marcus Crane</a> and this is my own personal little slice of internet</p>
