Close div on home page

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,4 +7,5 @@
   <p>I maintain a <a href="/blog/">blog</a> and I also upload some <a href="/notes/">notes</a> from time to time.</p>
   
   <p>If you want to know what I'm currently up to, or realistically what I was up to two weeks ago, there's <a href="/now">a page for that</a></p>
+</div>
 {{ end }}
