Got PostCSS running with merged tailwind/custom styling

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,15 +1,11 @@
 {{ define "main" }}
-<h1>{{ if ne .Section "blog"}}{{ .Title }}{{ else }}Posts{{ end }}</h1>
+<h1>{{ .Title }}</h1>
 <ul>
   {{ range .Pages }}
   <li>
-    <span id="list-date">{{ .Date.Format "2006-01-02" }}</span>
+    <date>{{ .Date.Format "2006-01-02" }}</date>
     ~
-    <a href="{{ .RelPermalink }}">
-      <span>{{ .Title }}</span>
-    </a>
-    <span class="tag-list">
-    </span>
+    <a href="{{ .RelPermalink }}">{{ .Title }}</a>
   </li>
   {{ end }}
 </ul>
