--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,15 +1,14 @@
 {{ define "main" }}
-<div id="home" style="text-align: center;">
+<div>
   <h1>utf9k</h1>
   <p>welcome. i try to write things from time to time.</p>
   <a href="/a-whole-bunch-of-places/">you can find me in a whole bunch of places</a>
-  <ul class="no-list-style">
+  <ul>
     <li>
       <a href="/blog/">blog</a>
       //
       <a href="/notes/">notes</a>
-      <br />
-      <br />
+      //
       <a href="/about/">about</a>
       //
       <a href="/now/">now</a>
