--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,32 +3,41 @@
 ***/
 
 :root {
-  --blueish: hsl(207, 33%, 18%, 1);
-  --border-blueish: hsl(207, 10%, 10%, 1);
-  --greyish: hsl(44, 35%, 94%, 1);
-  --border-greyish: hsl(40, 12%, 86%, 1);
+  --blueish-headers: hsl(207, 33%, 18%, 1);
+  --blueish-text: hsl(207, 29%, 22%, 1);
+  --blueish-border: hsl(207, 10%, 10%, 1);
+  --greyish-headers: hsl(44, 35%, 94%, 1);
+  --greyish-text: hsl(40, 12%, 86%, 1);
+  --greyish-borders: hsl(40, 12%, 86%, 1);
 }
 
 /* Look ma, dark mode! Not that I use dark mode mind you but it's nice to have */
 @media (prefers-color-scheme: light) {
   body {
-    background-color: var(--greyish);
-    color: var(--blueish);
+    background-color: var(--greyish-headers);
+    
   }
   
-  h1, h2, h3, h4, h5, h6, p, a {
-    color: var(--blueish);
+  body, p, a, time {
+    color: var(--blueish-text);
+  }
+  
+  h1, h2, h3, h4, h5, h6 {
+    color: var(--blueish-headers);
   }
 }
 
 @media (prefers-color-scheme: dark) {
   body {
-    background-color: var(--blueish);
-    color: var(--greyish);
+    background-color: var(--blueish-headers);
   }
   
-  h1, h2, h3, h4, h5, h6, p, a {
-    color: var(--greyish);
+  body, p, a, time {
+    color: var(--greyish-text);
+  }
+  
+  h1, h2, h3, h4, h5, h6 {
+    color: var(--greyish-headers);
   }
 }
 
@@ -39,6 +48,7 @@
 html {
   font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Ubuntu, "Helvetica Neue", Arial, sans-serif;
   overflow-x: hidden;
+  text-rendering: optimizeLegibility;
 }
 
 body {
@@ -46,8 +56,41 @@ body {
   padding: 0;
 }
 
-h1:before {
-  content: "፡ "
+p {
+  font-size: 1.3rem;
+  line-height: 1.5;
+  margin: 1rem 0;
+  white-space: break-spaces;
+}
+
+p:first-of-type {
+  margin: 0;
+}
+
+a {
+  font-size: 1.2rem;
+  font-weight: 700;
+}
+
+h1 {
+  font-size: 2.5rem;
+  margin-bottom: .25rem;
+}
+
+header {
+  font-size: 1.3rem;
+}
+
+.toc {
+  margin: 2rem 0;
+}
+
+.toc summary {
+  font-style: italic;
+}
+
+.disclaimer {
+  font-size: .8rem;
 }
 
 /***
@@ -58,7 +101,7 @@ h1:before {
    A list of blog posts isn't really an article for example so main will do instead. */
 main, article {
   display: grid;
-  grid-template-columns: 1fr 20em 650px 20em 1fr;
+  grid-template-columns: 1fr 20em 630px 20em 1fr;
   grid-auto-flow: column;
   grid-auto-rows: auto;
 }
@@ -67,9 +110,12 @@ main *, article * {
   grid-column: 3 / span 1;
 }
 
-/* Code blocks are often the longest content so we'll make them a full page length. */
+/* Code blocks are currently the width of the post itself but I intend to allow resizing shortly.
+   I'd prefer that the user has formatting controls to determine their favourite style
+*/
 article .highlight, article table {
-  grid-column: 2 / span 3;
+  grid-column: 3 / span 1;
+  /* grid-column: 2 / span 3; */
 }
 
 /***
