--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,10 @@ body {
   padding: 0;
 }
 
+article {
+  margin-bottom: 2.5rem;
+}
+
 p {
   font-size: 1.3rem;
   line-height: 1.5;
@@ -63,8 +67,12 @@ p {
   white-space: break-spaces;
 }
 
+header {
+  margin-bottom: 2rem;
+}
+
 p:first-of-type {
-  margin: 0;
+  margin-top: 2rem;
 }
 
 a {
@@ -74,6 +82,7 @@ a {
 
 h1 {
   font-size: 2.5rem;
+  margin-top: 2.5rem;
   margin-bottom: .25rem;
 }
 
@@ -81,9 +90,9 @@ header {
   font-size: 1.3rem;
 }
 
-.toc {
+/* .toc {
   margin: 2rem 0;
-}
+} */
 
 .toc summary {
   font-style: italic;
