Added a header with breadcrumbs

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -5,6 +5,7 @@
   {{ block "json+ld" . }}{{ end }}
 </head>
 <body>
+  {{ partial "header.html" . }}
   {{ block "main" . }}{{ end }}
 </body>
 </html>
