--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
   --blueish-border: hsl(207, 10%, 10%, 1);
   --greyish-headers: hsl(44, 35%, 94%, 1);
   --greyish-text: hsl(40, 12%, 86%, 1);
-  --greyish-borders: hsl(40, 12%, 86%, 1);
+  --greyish-border: hsl(40, 12%, 86%, 1);
 }
 
 /* Look ma, dark mode! Not that I use dark mode mind you but it's nice to have */
@@ -17,13 +17,18 @@
     background-color: var(--greyish-headers);
     
   }
-  
+
   body, p, a, time {
     color: var(--blueish-text);
   }
-  
+
   h1, h2, h3, h4, h5, h6 {
     color: var(--blueish-headers);
+  }
+
+
+  #overview {
+    border-bottom: 1px solid var(--greyish-border);
   }
 }
 
@@ -31,13 +36,18 @@
   body {
     background-color: var(--blueish-headers);
   }
-  
+
   body, p, a, time {
     color: var(--greyish-text);
   }
-  
+
   h1, h2, h3, h4, h5, h6 {
     color: var(--greyish-headers);
+  }
+
+
+  #overview {
+    border-bottom: 1px solid var(--blueish-border);
   }
 }
 
@@ -60,39 +70,65 @@ article {
   margin-bottom: 2.5rem;
 }
 
-p {
+article header {
+  margin-bottom: 2rem;
+}
+
+article p {
   font-size: 1.3rem;
   line-height: 1.5;
   margin: 1rem 0;
   white-space: break-spaces;
 }
 
-header {
-  margin-bottom: 2rem;
-}
-
-p:first-of-type {
+article p:first-of-type {
   margin-top: 2rem;
 }
 
-a {
+article a {
   font-size: 1.2rem;
   font-weight: 700;
 }
 
-h1 {
+article h1 {
   font-size: 2.5rem;
   margin-top: 2.5rem;
   margin-bottom: .25rem;
 }
 
-header {
+article header {
   font-size: 1.3rem;
 }
 
-/* .toc {
-  margin: 2rem 0;
-} */
+#overview {
+  display: flex;
+  height: 3rem;
+}
+
+#overview a {
+  align-items: center;
+  display: flex;
+  margin-left: 13px;
+  text-decoration: none;
+}
+
+.favicon {
+  height: 20px;
+  width: 20px;
+}
+
+.favicon img {
+  height: 16px;
+  width: 16px;
+}
+
+#overview .sitename, #overview .section, #overview .slug {
+  padding-left: .3rem;
+}
+
+#overview .section:before, #overview .slug:before {
+  content: "↝ "
+}
 
 .toc summary {
   font-style: italic;
