--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -15,4 +15,11 @@
       {{ end }}
     {{ end }}
   </a>
+  <div class="breadcrumbs">
+    <sup>
+      <a href="/index.xml">
+        <img src="/icons/rss-28x28.png" height="14" width="14" />
+      </a>
+    </sup>
+  </div>
 </div>
