Did a number of things
- Fixed logic for breadcrumbs
- Added extra div to header with segments having their own links
- Changed notes section into an FAQ style section called questions
- Removed custom lists in favour of one with some conditionals
- Added a thanks page
- Updated about page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,15 +103,23 @@ article header {
   height: 3rem;
 }
 
-#overview a {
-  align-items: center;
-  display: flex;
-  flex: 1 1 auto;
-  margin-left: 13px;
-  text-decoration: none;
+main ul {
+  margin-top: 2rem;
 }
 
 #overview .breadcrumbs {
+  display: flex;
+  flex: 1 1 auto;
+  margin-left: 13px;
+}
+
+#overview .breadcrumbs a {
+  align-items: center;
+  display: flex;
+  text-decoration: none;
+}
+
+#overview .links {
   align-items: center;
   display: flex;
   flex: 0 0 auto;
