--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,12 +1,19 @@
 {{ define "main" }}
-<h1>{{ .Title }}</h1>
-<ul>
-  {{ range .Pages }}
-  <li>
-    <date>{{ .Date.Format "2006-01-02" }}</date>
-    ~
-    <a href="{{ .RelPermalink }}">{{ .Title }}</a>
-  </li>
-  {{ end }}
-</ul>
+<main>
+  <h1>{{ .Title }}</h1>
+  <ul>
+    {{ $years := .Scratch }}
+    {{ range .Pages }}
+    {{ $year := .Date.Format "2006" }}
+    {{ if not (in ($years.Get "years") $year) }}
+      <h2>{{ .Date.Format "2006" }}</h2>
+      {{ $years.Add "years" (slice $year) }}
+    {{ end }}
+    <li>
+      <a href="{{ .RelPermalink }}">{{ .Title }}</a>
+      <time>{{ .Date.Format "Jan 02" }}</time>
+    </li>
+    {{ end }}
+  </ul>
+</main>
 {{ end }}
